# py_skeletonizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/py_skeletonizer/: ast_processor.py  bundle_builder.py  cli.py  config.py  context_splitter.py  dependency_analyzer.py  git_diff_analyzer.py  layer_filter.py  role_extractor.py  scanner.py  syncer.py  token_counter.py
