[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-skeletonizer"
version = "0.1.0"
description = "AIコンテキスト向けのPythonコード最適化・スケルトン生成ツール"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Developer" }
]
# コア依存モジュール (pip install -e . 実行時に自動インストールされます)
dependencies = [
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
# コマンドラインから 'py-skeletonizer' または 'pyskel' として直接実行できるようにするエイリアス設定
py-skeletonizer = "py_skeletonizer.cli:main"
pyskel = "py_skeletonizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]